se adiciono end point usar secret

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Ejecutar pruebas
+        env:
+          MY_SECRET: ${{ secrets.MY_SECRET }}
         run: pytest -v
